fix: Unclickable gallery close button, searchbar overlapping scrollbar

--- a/src/containers/ThumbnailGallery/style.css
+++ b/src/containers/ThumbnailGallery/style.css
@@ -42,7 +42,8 @@
     min-width: var(--side-bar-width);
     border-left: 1px solid var(--border-gray);
     position: fixed;
-    right: 0;
+    right: 10px;
+    z-index: 2;
 
     & :global(.ant-radio-button-wrapper) {
         border-radius: 0 !important;
